--- a/react-frontend/src/App.css
+++ b/react-frontend/src/App.css
@@ -5,7 +5,7 @@
   min-height: 100vh;
 }
 
-.LeftNavi, .Main, .RightNavi {
+.LeftNavi, .Main, .RightNavi,.Footer {
   padding: 1em;
   border: 1px solid;
 }
@@ -42,6 +42,15 @@
 .Main {
   /* background-color: red; */
   flex-grow: 2;
+  display:flex;
+  flex-direction: column;
+}
+
+.MainUpper {
+  flex-grow:2;
+}
+.MainLower {
+
 }
 
 .RightNavi {
@@ -56,3 +65,4 @@
 .Footer {
 
 }
+
